--- a/mi_proyecto/core/templates/core/base.html
+++ b/mi_proyecto/core/templates/core/base.html
@@ -13,22 +13,18 @@
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}">Mi Proyecto</a>
+            <a class="navbar-brand" href="{% url 'home' %}">Bienvenido</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Inicio</a>
+                  <a class="nav-link active" aria-current="page" href="{% url 'login' %}">Iniciar sesion</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Nosotros</a>
+                  <a class="nav-link active" aria-current="page" href="{% url 'register' %}">Registrarse</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'products' %}">Productos</a>
-                </li>
-
                 {% if request.user.is_authenticated %}
                     <li class="nav-item">
                       <a href={% url 'login' %} class="card-link">Salir</a>
@@ -47,7 +43,6 @@
           </div>
         </nav>
 
-        <h2>Inicio</h2>
 
         {% block content %}{% endblock %}
         
